test/fail/integration/_fail_sem_decl_funct_2.hs
x :: Int -> Int
y :: Int
y = let x r = r in x 3
main = print "hello"